syntax = "proto3";

option go_package = "./proto";

package solarservice;

service SolarService{
    rpc GetEnergyFromHomesByParams (PowerConsumptionRequest) returns (stream PowerFromHomes) {}
}

message PowerConsumptionRequest {
    int64 year = 1;
    int64 responseAmount = 2;
    string region = 3;
    string character = 4;
}

message PowerFromHomes {
    float value = 1;
    string period = 2;
    int64 year = 3;
    string unit = 4;
    int64 precision = 5;
    string character = 6;
    string region = 7;
}
